test/good/tuples/tuple08.px

func f(x: Int*Float): Float*Int def
    print x.b
    return x.a, x.a^^2

x: Int*Int = 3, 4
print f(x)
